--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
                 </div>
                 
                 <div class="store-actions">
-                    <a href="tienda.html" class="btn-notify" id="visit-store-btn">
+                    <a href="https://alejandromachucastd.github.io/tiendaenlineastdtec/" class="btn-notify" id="visit-store-btn">
                         <i class="fas fa-shopping-cart"></i>
                         Visitar Tienda Online
                     </a>
